Convert to stylus + add a couple other scripts

--- a/aliem/style.css
+++ b/aliem/style.css
@@ -1,7 +1,5 @@
 /*
-Theme Name: Avada Child
-Description: Child theme for the Avada
-Author: Your name here
+Theme Name: ALiEM
 Template: Avada
 */
 
