--- a/aliem/styles/colors.styl
+++ b/aliem/styles/colors.styl
@@ -1,15 +1,4 @@
 $primary = #00b092
-$gray = #706d6e
-$text = #333333
-
-
-// TODO: Needs sorting
-$color1 = #66727F
-$color2 = #F5F5F5
-$color3 = #d0d0d0
-$color4 = #ddd
-$color5 = #F2F2F2
-$color6 = #949494
-$color7 = #F9F9F9
-$color8 = #F3F3F3
-$color9 = #e5e5e5
+$secondary = #F2F2F2 // Header background
+$font-primary = #333333 // Font color FIXME -- this should be lighter
+$font-gray = #706d6e // header font color
