--- a/aliem/styles/collections/social-icons.styl
+++ b/aliem/styles/collections/social-icons.styl
@@ -1,97 +1,93 @@
 .sharing-icons
-    display flex
-    margin-bottom 15px
+    display: flex
+    margin-bottom: 15px
 
 .resp-sharing-button
-    display inline-block
-    border-radius 5px
-    border-width 1px
-    border-style solid
-    transition background-color 25ms ease-out, border-color 25ms ease-out, opacity 250ms ease-out
-    margin 0.5em
-    padding 0.25em 0.5em
-    font-family Helvetica Neue,Helvetica,Arial,sans-serif
-
-.resp-sharing-button a
-    text-decoration none
-    color #FFF
-    display block
+    display: inline-block
+    border-radius: 5px
+    border-width: 1px
+    border-style: solid
+    transition: background-color 25ms ease-out, border-color 25ms ease-out, opacity 250ms ease-out
+    margin: 0.5em
+    padding: 0.25em 0.5em
+    font-family: 'Helvetica Neue,Helvetica,Arial,sans-serif'
+    a
+        text-decoration: none
+        color: white
+        display: block
 
 
 .resp-sharing-button__icon
-    display inline-block
-
-
-.resp-sharing-button__icon svg
-    width 1em
-    height 1em
-    margin-bottom -0.1em
-
+    display: inline-block
+    svg
+        width: 1em
+        height: 1em
+        margin-bottom: -0.1em
 
 /* Solid icons get a fill */
 .resp-sharing-button__icon--solid
-    fill #FFF
-    stroke none
+    fill: white
+    stroke: none
 
 .resp-sharing-button--large .resp-sharing-button__icon svg
 .resp-sharing-button--medium .resp-sharing-button__icon svg
-    padding-right 0.4em
+    padding-right: 0.4em
 
 
 .resp-sharing-button__wrapper
-    display inline-block
+    display: inline-block
 
 
 .resp-sharing-button--print
-    background-color $primary
-    border-color $primary
+    background-color: $primary
+    border-color: $primary
 
 
 .resp-sharing-button--print:hover
 .resp-sharing-button--print:active
-    background-color darken($primary, 5)
-    border-color darken($primary, 5)
+    background-color: darken($primary, 5)
+    border-color: darken($primary, 5)
 
 
 .resp-sharing-button--facebook
-    background-color #3b5998
-    border-color #3b5998
+    background-color: $social-icons.facebook
+    border-color: $social-icons.facebook
 
 
 .resp-sharing-button--facebook:hover
 .resp-sharing-button--facebook:active
-    background-color #2d4373
-    border-color #2d4373
+    background-color: darken($social-icons.facebook, 10)
+    border-color: darken($social-icons.facebook, 10)
 
 
 .resp-sharing-button--twitter
-    background-color #55acee
-    border-color #55acee
+    background-color: $social-icons.twitter
+    border-color: $social-icons.twitter
 
 
 .resp-sharing-button--twitter:hover
 .resp-sharing-button--twitter:active
-    background-color #2795e9
-    border-color #2795e9
+    background-color: darken($social-icons.twitter, 10)
+    border-color: darken($social-icons.twitter, 10)
 
 
 .resp-sharing-button--google
-    background-color #dd4b39
-    border-color #dd4b39
+    background-color: $social-icons.googleplus
+    border-color: $social-icons.googleplus
 
 
 .resp-sharing-button--google:hover
 .resp-sharing-button--google:active
-    background-color #c23321
-    border-color #c23321
+    background-color: darken($social-icons.googleplus, 10)
+    border-color: darken($social-icons.googleplus, 10)
 
 
 .resp-sharing-button--reddit
-    background-color #5f99cf
-    border-color #5f99cf
+    background-color: $social-icons.reddit
+    border-color: $social-icons.reddit
 
 
 .resp-sharing-button--reddit:hover
 .resp-sharing-button--reddit:active
-    background-color #3a80c1
-    border-color #3a80c1
+    background-color: darken($social-icons.reddit, 10)
+    border-color: darken($social-icons.reddit, 10)
