--- a/aliem/styles/colors.styl
+++ b/aliem/styles/colors.styl
@@ -1,4 +1,11 @@
 $primary = #00b092
 $secondary = #F2F2F2 // Header background
-$font-primary = #333333 // Font color FIXME -- this should be lighter
+$font-primary = #333333 // Font color FIXME -- this should probably be lighter
 $font-gray = #706d6e // header font color
+
+$social-icons = {
+    facebook: #3b5998,
+    twitter: #55acee,
+    googleplus: #dd4b39,
+    reddit: #5f99cf,
+}
