fix: change blockquote border-left color to primary
Closes #5

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -38,7 +38,8 @@
         text-decoration: underline
 
     blockquote
-        font-style: italic
+        border-left: 4px solid $primary
+        font: italic 13px/20px 'Open Sans',arial,helvetica,sans-serif
 
 
 // "Next" and "Previous" buttons at the top of posts
