--- a/aliem/styles/collections/header.styl
+++ b/aliem/styles/collections/header.styl
@@ -17,7 +17,7 @@
                 background: white
                 &:first-of-type
                     padding: 0
-                    background: lighten($secondary, 3)
+                    background: $tertiary
                     border-right: solid $secondary 1px
                     .sub-menu
                         margin-top: 0
