--- a/aliem/styles/collections/plugins.styl
+++ b/aliem/styles/collections/plugins.styl
@@ -1,10 +1,11 @@
+@require '../colors'
 
 // Academic Bloggers Toolkit
 .abt_PR_heading // @stylint ignore
     border-bottom: 4px solid $primary
 
 #abt-bibliography
-    background: lighten($secondary, 3)
+    background: $tertiary
     border-radius: 2px
     font-size: 0.8em
     padding: 0 10px 10px 10px
