--- a/aliem/styles/colors.styl
+++ b/aliem/styles/colors.styl
@@ -1,5 +1,6 @@
 $primary = #00b092
 $secondary = #F2F2F2 // Header background
+$tertiary = #F5F5F5
 $font-primary = #333333 // Font color FIXME -- this should probably be lighter
 $font-gray = #706d6e // header font color
 
