fix: include Open Sans 600 weight + adjust headings
Closes #8

--- a/aliem/styles/collections/avada.styl
+++ b/aliem/styles/collections/avada.styl
@@ -1,4 +1,8 @@
 // @stylint off
+
+.bbp-pagination .bbp-pagination-links a.inactive:hover, .page-links a:hover, .pagination a.inactive:hover, .woocommerce-pagination .page-numbers:hover
+    border: 1px solid $primary
+
 .fusion-accordian .panel-title a:hover .fa-fusion-box
     background-color: $primary
     border-color: $primary
