--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -30,6 +30,8 @@ a, .fusion-content-widget-area .widget li a
     color: $primary
     &:hover
         color: darken($primary, 10)
+strong
+    font-weight: 600
 
 table
     border-collapse: collapse
