fix: center embedded tweets + set max width for embeds
Closes #23, #24

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -34,12 +34,15 @@
     ul > li
         line-height: 1.6em !important
         margin-bottom: 0px !important
-
     blockquote
         border-left: 4px solid $primary
         font: italic 13px/20px 'Open Sans',arial,helvetica,sans-serif
         img
             display: inline-block
+    iframe
+        max-width: 100%
+    .twitter-tweet-rendered
+        margin: auto
 
 // "Next" and "Previous" buttons at the top of posts
 .single-navigation
