fix: reduce font weight in menus
Closes #11

--- a/aliem/styles/collections/header.styl
+++ b/aliem/styles/collections/header.styl
@@ -26,7 +26,7 @@
                             line-height: 2em
 
 .fusion-megamenu-title
-    font-weight: bold
+    font-weight: 600
     padding-bottom: 5px
 
 .fusion-megamenu-bullet
