fix: standardize all input:focus outline colors
Closes #14

--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -33,6 +33,10 @@ a, .fusion-content-widget-area .widget li a
 strong
     font-weight: 600
 
+input
+    &:focus
+        outline-color: $input-focus
+
 table
     border-collapse: collapse
     border-spacing: 0
