--- a/aliem/styles/collections/plugins.styl
+++ b/aliem/styles/collections/plugins.styl
@@ -14,6 +14,10 @@
         font-size: 1.3rem
         line-height: 2.5em
 
+// Polldaddy
+.PDS_Poll // @stylint ignore
+    margin: 20px auto
+
 // Shortcodes Ultimate
 .su-lightbox
     display: block
@@ -24,12 +28,3 @@
     span
         line-height: 40px !important
         font-size: 1.3em !important
-
-// Image Box Shortcode
-.img-box
-    background-color: $secondary
-    padding: 10px 10px 0 10px
-    font-size: 0.8em
-    box-shadow: $shadow-2dp
-    text-align: justify
-    margin-bottom: 1em
