--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -64,6 +64,9 @@ table
             text-align: justify
             padding: 0 .8em
             color: $font-gray
+        p
+            margin: 10px 0 !important
+            line-height: 1.5em
 
 
 @media (max-width: 800px)
