--- a/aliem/styles/collections/plugins.styl
+++ b/aliem/styles/collections/plugins.styl
@@ -14,6 +14,9 @@
         font-size: 1.3rem
         line-height: 2.5em
 
+.abt_PR_info // @stylint ignore
+    line-height: 1.5em
+
 // Polldaddy
 .PDS_Poll // @stylint ignore
     margin: 20px auto
