fix: justify text in image caption boxes + fix background color
Closes #22

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -92,14 +92,16 @@
         padding-top: 5px
 
 // Image caption boxes
-.wp-caption-text
-    background: $secondary
-    margin: 0 !important
-    padding-top: 5px
 .wp-caption
-    background: $secondary
+    background: $tertiary
     padding: 10px
     box-shadow: $shadow-2dp
+    border-radius: 2px
+.wp-caption-text
+    text-align: justify
+    background: $tertiary
+    margin: 0 !important
+    padding-top: 5px
 
 // Gigantic image above pages
 .fusion-flexslider
