fix: add bottom margin to image caption boxes
Closes #17

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -97,6 +97,7 @@
     padding: 10px
     box-shadow: $shadow-2dp
     border-radius: 2px
+    margin-bottom: 20px
 .wp-caption-text
     text-align: justify
     background: $tertiary
