--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -25,6 +25,8 @@
         font-weight: 600
     h2
         font-weight: 400
+        &.entry-title
+            font-weight: 600
     h3
         font-weight: 600
         text-transform: uppercase
