--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -37,6 +37,10 @@ input
     &:focus
         outline-color: $input-focus
 
+::selection
+    background: $primary
+    color: white
+
 table
     border-collapse: collapse
     border-spacing: 0
