--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -79,6 +79,24 @@
         &:after
             color: $font-primary
 
+// "Wired" style hyperlinks
+// .fusion-post-content-container,
+// .post-content
+//     a:not(.more-link)
+//         border-bottom: 2px solid lighten($primary, 10)
+//         box-shadow: inset 0 -4px 0 lighten($primary, 10)
+//         color: inherit
+//         transition: background .15s cubic-bezier(.33,.66,.66,1)
+//         color: inherit
+//         text-decoration: none
+//         overflow-wrap: break-word
+//         word-wrap: break-word
+//         word-break: break-word
+//         &:hover,
+//         &:focus,
+//         &:active
+//             background: lighten($primary, 10)
+
 // Both the "read more" div on the home page and the author meta on posts
 .fusion-meta-info
     border: 0
