--- a/aliem/styles/colors.styl
+++ b/aliem/styles/colors.styl
@@ -5,6 +5,8 @@ $tertiary = #F5F5F5
 $font-primary = #333333
 $font-gray = #706d6e // header font color
 
+$feminem-secondary = #ccccff
+
 $social-icons = {
     facebook: #3b5998,
     twitter: #55acee,
