--- a/aliem/styles/collections/home.styl
+++ b/aliem/styles/collections/home.styl
@@ -1,4 +1,5 @@
-.home, .archive
+.home,
+.archive
     .post
         background: white
         padding: 20px
@@ -7,10 +8,6 @@
         margin-bottom: 20px
         .fusion-meta-info
             display: none
-
-// ----------- END NEW CARD STYLE CHANGES
-
-// TODO: comb through this entire file
 
 // Remove date stamps from beside posts
 .fusion-date-and-formats
@@ -24,7 +21,7 @@
 
 // Bold post titles
 #main h2.entry-title
-    // font-weight 700 !important
+    font-weight: 600
     margin: 0
     a
         color: $font-primary
